syntax = "proto3";
package com.prior.grpc.proto;

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}

//file message
message File{
  bytes content =1;
}
message FileWeb{
  repeated FileChunk Web=1;
}
message FileChunk {
  FileName  name = 1;
  File file = 2;
}

message UploadStatus {
  string message = 1;
}
message FileName{
  string  name = 1;
}


//student message

message Student{
  string name  =1 ;
  string gender = 2;
}

message  StudentGroup{
  repeated Student students = 1;
  int32  numOfGroup = 2;
}
message  ClassRoom{
  StudentGroup studentGroup = 1;
  string  teacherName = 2;
}



//
service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
}
//
service FileService {

  rpc UploadFiles(stream FileChunk) returns (UploadStatus) {}
  rpc DownloadFiles(FileName) returns (stream FileChunk) {}
}
//
service  ClassRoomService{
  rpc JoinClass(stream StudentGroup) returns (stream ClassRoom) {}
}


